# mg-mcp-weather

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
context/: mcp-weather-spec.md  tutorial-mcp-server.py
mg_mcp_weather/: __init__.py  __main__.py  server.py
