[project]
name = "mg-mcp-weather"
version = "0.1.0"
description = "MCP server for weather alerts and forecasts using the US National Weather Service API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ben Wilson", email = "ben.wilson@mammothgrowth.com"}
]
keywords = ["mcp", "weather"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mg_mcp_weather*"]

[project.scripts]
mg-mcp-weather = "mg_mcp_weather.__main__:main"

[project.urls]
"Homepage" = "https://github.com/benwilson512/mg-mcp-weather"
"Bug Tracker" = "https://github.com/benwilson512/mg-mcp-weather/issues"

